...

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_fragment_email_label"
            style="@style/Theme.MollerT.CommonLabelText"
            android:layout_marginTop="@dimen/dimen_25"
            android:text="@string/email_label"
            app:layout_constraintStart_toStartOf="@id/forgot_password_fragment_email"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_fragment_app_icon" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_fragment_email"
            style="@style/Theme.MollerT.CommonEditText"
            android:layout_marginTop="@dimen/dimen_10"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_fragment_email_label" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_fragment_sign_in"
            style="@style/Theme.MollerT.ExpandedYellowButton"
            android:layout_marginBottom="@dimen/dimen_15"
            android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_SEND_PASSWORD_CLICKED)}"
            android:text="@string/send_password_to_email"
            app:layout_constraintBottom_toTopOf="@id/forgot_password_fragment_forgot_account"
            app:layout_constraintEnd_toEndOf="parent"
...
