...
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_baseline_chevron_left_24" />

                <TextView
                    android:id="@+id/login_fragment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sign_in_title"
                    android:textAllCaps="false"
...
