<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">


    <fragment
        android:id="@+id/splashFragment"
        android:name="com.tnh.mollert.splash.SplashFragment"
        android:label="SplashFragment" >
        <action
            android:id="@+id/action_splashFragment_to_registerFragment"
            app:destination="@id/registerFragment"

            app:enterAnim="@anim/fade_in_slow"
            app:exitAnim="@anim/slide_up_from_bottom"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in_slow"
            app:exitAnim="@anim/slide_up_from_bottom"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_testFragment"
            app:destination="@id/testFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.tnh.mollert.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast"
            app:popUpTo="@id/splashFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/fade_in_slow"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.tnh.mollert.register.RegisterFragment"
        android:label="RegisterFragment" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast"
            app:popUpTo="@id/splashFragment" />
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/cardDetailFragment"
        android:name="com.tnh.mollert.cardDetail.CardDetailFragment"
        android:label="CardDetailFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
        <argument
            android:name="boardId"
            app:argType="string" />
        <argument android:name="listId"
            app:argType="string" />
        <argument
            android:name="cardId"
            app:argType="string" />
        <action
            android:id="@+id/action_cardDetailFragment_to_addEditLabelFragment"
            app:destination="@id/addEditLabelFragment" />
    </fragment>
    <fragment
        android:id="@+id/boardDetailFragment"
        android:name="com.tnh.mollert.boardDetail.BoardDetailFragment"
        android:label="BoardDetailFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
        <argument
            android:name="boardId"
            app:argType="string" />
        <argument android:name="boardName"
            app:argType="string"
            />
        <action
            android:id="@+id/action_boardDetailFragment_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment"
            app:enterAnim="@anim/slide_up_from_bottom_normal"
            app:popEnterAnim="@anim/fade_in_slow"
            app:popExitAnim="@anim/slide_down_from_bottom_normal" />
        <action
            android:id="@+id/action_boardDetailFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tnh.mollert.home.HomeFragment"
        android:label="home_fragment"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_boardDetailFragment"
            app:destination="@id/boardDetailFragment"
            app:enterAnim="@anim/slide_up_from_bottom_normal"
            app:exitAnim="@anim/slide_up_from_top_normal"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/slide_down_from_bottom_normal" />
        <action
            android:id="@+id/action_homeFragment_to_addWorkspaceFragment"
            app:destination="@id/addWorkspaceFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_manageWorkspaceFragment"
            app:destination="@id/manageWorkspaceFragment" />
    </fragment>
    <fragment
        android:id="@+id/testFragment"
        android:name="com.tnh.mollert.test.TestFragment"
        android:label="TestFragment" />
    <fragment
        android:id="@+id/addWorkspaceFragment"
        android:name="com.tnh.mollert.home.addWorkspace.AddWorkspaceFragment"
        android:label="AddWorkspaceFragment" />
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.tnh.mollert.forgotpassword.ForgotPasswordFragment"
        android:label="ForgotPasswordFragment" >
        <action
            android:id="@+id/action_forgotPasswordFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/splashFragment" />
        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.tnh.mollert.notification.NotificationFragment"
        android:label="NotificationFragment" >
        <action
            android:id="@+id/action_notificationFragment_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment" />
        <action
            android:id="@+id/action_notificationFragment_to_boardDetailFragment"
            app:destination="@id/boardDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.tnh.mollert.calendar.CalendarFragment"
        android:label="CalendarFragment" >
        <action
            android:id="@+id/action_calendarFragment_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.tnh.mollert.profile.ProfileFragment"
        android:label="ProfileFragment" >
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_profileFragment_to_splashFragment"
            app:destination="@id/splashFragment"
            app:enterAnim="@anim/slide_down_from_top"
            app:exitAnim="@anim/fade_out_fast"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addEditLabelFragment"
        android:name="com.tnh.mollert.cardDetail.label.AddEditLabelFragment"
        android:label="AddEditLabelFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
        <argument
            android:name="boardId"
            app:argType="string" />
        <argument
            android:name="listId"
            app:argType="string" />
        <argument
            android:name="cardId"
            app:argType="string" />
        <argument
            android:name="labelId"
            app:argType="string" />
        <argument
            android:name="labelName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.tnh.mollert.profile.edit.EditProfileFragment"
        android:label="EditProfileFragment" />
    <fragment
        android:id="@+id/manageWorkspaceFragment"
        android:name="com.tnh.mollert.home.manage.ManageWorkspaceFragment"
        android:label="ManageWorkspaceFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.tnh.mollert.boardDetail.dashboard.DashboardFragment"
        android:label="DashboardFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
        <argument
            android:name="boardId"
            app:argType="string" />
    </fragment>

    <action android:id="@+id/action_global_home"
        app:popUpTo="@id/homeFragment"
        app:popUpToInclusive="true"
        app:destination="@id/homeFragment"
        app:launchSingleTop="true"
        />
    <action android:id="@+id/action_global_deadline"
        app:popUpTo="@id/homeFragment"
        app:destination="@id/calendarFragment"
        app:launchSingleTop="true"
        />
    <action android:id="@+id/action_global_notification"
        app:popUpTo="@id/homeFragment"
        app:destination="@id/notificationFragment"
        app:launchSingleTop="true"
        />
    <action android:id="@+id/action_global_profile"
        app:popUpTo="@id/homeFragment"
        app:destination="@id/profileFragment"
        app:launchSingleTop="true"
        />
</navigation>