<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_picker_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/two_action_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/label_picker_toolbar"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/label_item_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="12"
            app:layout_constraintTop_toBottomOf="@id/label_picker_toolbar"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/label_picker_new_label"
            tools:listitem="@layout/label_item"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/label_picker_new_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_8"
            style="@style/Theme.MollerT.ExpandedOutlineButton"
            android:text="Add New Label"
            android:textSize="18sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>