...
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/add_label_toolbar"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_label_toolbar"
            android:drawableStart="@drawable/vd_tag"
...
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:visibility="gone"
                android:paddingHorizontal="@dimen/dimen_8"
                android:paddingVertical="@dimen/dimen_16"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:text="Click to remove"
                android:drawableStart="@drawable/ic_round_chevron_right_24"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
